# snappy-device-agents

./: README-pip-cache.rst  README.rst  pyproject.toml  requirements.txt
.github/workflows/: tox.yml
src/snappy_device_agents/data/riverside/: network-config.cfg
src/snappy_device_agents/devices/maas2/: maas_storage.py
src/snappy_device_agents/devices/multi/: __init__.py  multi.py  tfclient.py
src/snappy_device_agents/devices/riverside/: __init__.py  riverside.py
src/testflinger_device_agents/: __init__.py  cmd.py
src/testflinger_device_agents/devices/: __init__.py
src/testflinger_device_agents/devices/cm3/: __init__.py  cm3.py
src/testflinger_device_agents/devices/dragonboard/: __init__.py  dragonboard.py
src/testflinger_device_agents/devices/maas2/: __init__.py  maas2.py
src/testflinger_device_agents/devices/multi/: __init__.py  multi.py
src/testflinger_device_agents/devices/muxpi/: __init__.py  muxpi.py
src/testflinger_device_agents/devices/netboot/: __init__.py  netboot.py
src/testflinger_device_agents/devices/noprovision/: __init__.py  noprovision.py
src/testflinger_device_agents/devices/oemrecovery/: __init__.py  oemrecovery.py
src/testflinger_device_agents/devices/oemscript/: __init__.py  oemscript.py
src/testflinger_device_connectors/devices/: __init__.py
src/testflinger_device_connectors/devices/muxpi/: muxpi.py
src/testflinger_device_connectors/devices/oemrecovery/: oemrecovery.py
src/testflinger_device_connectors/fw_devices/: __init__.py  base.py  firmware_update.py
src/tests/: test_testflinger_device_agents.py
(+6 files in other folders)
