[build-system]
requires = [
    "wheel",
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "testflinger-device-agents"
version = "0.0.2"
description = "Testflinger device agents"
license = {text = "GPLv3"}
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=3.11",
    "requests",
]

[project.scripts]
snapy-device-agent = "testflinger_device_agents.cmd:main"
testflinger-device-agent = "testflinger_device_agents.cmd:main"

[tool.setuptools.package-data]
testflinger_device_agents = ["data/**"]

[tool.black]
line-length = 79
